feat: add guarantees page and fix minor bugs on index

--- a/guarantees.html
+++ b/guarantees.html
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <header class="header">
+ <header class="header">
       <div class="header__container">
         <div class="header__left">
           <ul class="nav">
@@ -151,18 +151,51 @@
     </header>
     <main class="main">
       <div class="main__container">
-        <section class="catalog">
-          <div class="catalog__header">
-            <h1 class="catalog__title">Витрина аккаунтов</h1>
+        <section class="guarantees">
+          <div class="guarantees__header">
+            <h1 class="guarantees__title">Наши гарантии</h1>
           </div>
-          <div class="catalog__main"></div>
+          <div class="guarantees__main">
+            <p class="guarantees__text">
+              <span class="guarantees__paragraph">
+                <span class="guarantees__spacing">Почему</span> вы можете смело
+                покупать аккаунты на этом сайте? Всё просто: мы — крупнейшее
+                сообщество по продаже и обмену аккаунтов в игре Drakensang
+                Online во ВКонтакте!</span
+              >
+              <span class="guarantees__paragraph"
+                ><span class="guarantees__spacing">Данный</span> сайт создан для
+                удобной покупки и продажи аккаунтов, а также для ознакомления со
+                всем нашим ассортиментом.
+              </span>
+              <span class="guarantees__paragraph"
+                ><span class="guarantees__spacing">В</span> будущем мы планируем
+                расширяться: с помощью сообщества ВКонтакте и Telegram-бота вы
+                тоже сможете выставлять свои аккаунты на нашем сайте! Пока что
+                здесь представлены только аккаунты владельца группы, более
+                известного как —
+                <a
+                  target="_blank"
+                  href="https://vk.com/ipixel"
+                  class="guarantees__link"
+                  >главного гаранта</a
+                >.</span
+              >
+            </p>
+            <div class="guarantees__reviews">
+              <h2 class="guarantees__reviews-title">Отзывы</h2>
+              <img src="./img/reviews.png" alt="reviews" class="guarantees__img">
+              <p class="guarantees__text">
+                <span class="guarantees__paragraph"><span class="guarantees__spacing">Убедиться</span> в отзывах вы можете перейдя по данной ссылке -
+              </p><a target="_blank" href="https://vk.com/ipixel?w=wall562994142_24" class="guarantees__link">Посмотреть отзывы</a></span>
+              
+            </div>
+          </div>
         </section>
       </div>
     </main>
     <footer class="footer">
-      <div class="footer__container">
-        
-      </div>
+      <div class="footer__container"></div>
     </footer>
 
     <script type="module" src="./js/main.js"></script>
