feat: enhance cards with adaptive design, price format and buttons

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             />
             <input
               type="button"
-              value="есть аккаунт? Войти"
+              value="Есть аккаунт? Войти"
               class="modal__login"
             />
             <input
