--- a/account.html
+++ b/account.html
@@ -29,7 +29,7 @@
           <ul class="nav">
             <li class="nav__item"><a href="#" class="nav__link">О нас</a></li>
             <li class="nav__item">
-              <a href="#" class="nav__link">Гарантии</a>
+              <a href="./guarantees.html" class="nav__link">Гарантии</a>
             </li>
           </ul>
         </div>
@@ -75,10 +75,10 @@
                   </button>
                 </li>
                 <li class="mobile-nav__element">
-                  <button class="mobile-nav__link" href="">О нас</button>
+                  <a class="mobile-nav__link" href="">О нас</a>
                 </li>
                 <li class="mobile-nav__element">
-                  <button class="mobile-nav__link" href="">Гарантии</button>
+                  <a class="mobile-nav__link" href="./guarantees.html">Гарантии</a>
                 </li>
               </ul>
             </nav>
@@ -114,7 +114,7 @@
             />
             <input
               type="button"
-              value="есть аккаунт? Войти"
+              value="Есть аккаунт? Войти"
               class="modal__login"
             />
             <input
