feat: add image gallery for account pages
- Add modal gallery with blur effect for account images
- Fix visual bugs in catalog cards
- Improve modal windows with backdrop-filter

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="header__left">
           <ul class="nav">
             <li class="nav__item">
-              <a href="" class="nav__link">О нас</a>
+              <a href="./aboutUs.html" class="nav__link">О нас</a>
             </li>
             <li class="nav__item">
               <a href="./guarantees.html" class="nav__link">Гарантии</a>
@@ -67,7 +67,7 @@
                   </button>
                 </li>
                 <li class="mobile-nav__element">
-                  <a class="mobile-nav__link" href="">О нас</a>
+                  <a class="mobile-nav__link" href="./aboutUs.html">О нас</a>
                 </li>
                 <li class="mobile-nav__element">
                   <a class="mobile-nav__link" href="./guarantees.html">Гарантии</a>
