feat: add filter min/max inputs

--- a/index.html
+++ b/index.html
@@ -186,6 +186,27 @@
                 ↓ Сначала мин цена
               </button>
             </div>
+            <div class="filter__price">
+              <div class="filter__price-inputs">
+                <input
+                  type="number"
+                  class="filter__price-min"
+                  placeholder="От"
+                  min="0"
+                  step="1000"
+                />
+                <input
+                  type="number"
+                  class="filter__price-max"
+                  placeholder="До"
+                  min="0"
+                  step="1000"
+                />
+              </div>
+              <button type="button" class="filter__price-apply">
+                Применить
+              </button>
+            </div>
             <input
               type="search"
               name=""
