feat: add filter for account cards

--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
             </select>
             <select name="" id="" class="filter__select filter__select--class">
               <option value="any">Все классы</option>
-              <option value="spellweaver">Маг круга</option>
-              <option value="dragonknight">Воин дракона</option>
-              <option value="steam mechanicus">Паромеханист</option>
-              <option value="ranger">Следопыт</option>
+              <option value="Spellweaver">Маг круга</option>
+              <option value="Dragonknight">Воин дракона</option>
+              <option value="Steam-mechanicus">Паромеханист</option>
+              <option value="Ranger">Следопыт</option>
             </select>
             <div class="filter__sort">
               <button type="button" class="filter__sort-max">
@@ -207,13 +207,13 @@
                 Применить
               </button>
             </div>
-            <input
+            <!-- <input
               type="search"
               name=""
               id=""
               class="filter__search"
               placeholder="Поиск по словам"
-            />
+            /> -->
           </form>
         </div>
         <!-- Каталог -->
